# summarize_consumes

./: .gitignore  README.md  prices.json  pyproject.toml  readme.txt  requirements-dev.txt  requirements.txt  setup.py  summary.txt  tasks.py
examples/: ability-timeline-advanced-logger-1760594340.txt  ability-timeline-advanced-logger-postformat-1760594340.txt  ability-timeline-aq40-2023-09-23-19-31-45.txt  ability-timeline-aq40-2024-09-16.txt  ability-timeline-bwl-2023-10-15.txt  ability-timeline-bwl-2023-11-11.txt  ability-timeline-empty.txt  ability-timeline-naxx-full-2023-12-10.txt  ability-timeline-naxx-military-plague-construct-2023-10-12-19-38-01.txt  ability-timeline-naxx-spider-frostwing-2023-10-13.txt  ability-timeline-naxx-superwow-2025-02-10.txt  ability-timeline-naxx-superwow-2025-06-02.txt  compare-players-aq40-2024-09-16.txt  consumable-totals-aq40-2023-09-23-19-31-45.txt.csv  consumable-totals-aq40-2024-09-16.txt.csv  consumable-totals-bwl-2023-10-15.txt.csv  consumable-totals-bwl-2023-11-11.txt.csv  consumable-totals-naxx-full-2023-12-10.txt.csv  consumable-totals-naxx-military-plague-construct-2023-10-12-19-38-01.txt.csv  consumable-totals-naxx-spider-frostwing-2023-10-13.txt.csv  consumable-totals-naxx-superwow-2025-02-10.txt.csv  consumable-totals-naxx-superwow-2025-06-02.txt.csv  damage-output-aq40-2023-09-23-19-31-45.txt  damage-output-aq40-2024-09-16.txt  damage-output-bwl-2023-10-15.txt  damage-output-bwl-2023-11-11.txt  damage-output-naxx-full-2023-12-10.txt  damage-output-naxx-military-plague-construct-2023-10-12-19-38-01.txt  damage-output-naxx-spider-frostwing-2023-10-13.txt  damage-output-naxx-superwow-2025-02-10.txt  damage-output-naxx-superwow-2025-06-02.txt  healing-output-aq40-2023-09-23-19-31-45.txt  (+21 more)
(+35 files in other folders)
