[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "melbalabs_summarize_consumes"
authors = [
    {name = "melba"},
]
dynamic = ["version", "dependencies", "optional-dependencies"]

[project.urls]
Homepage = "https://github.com/melbaa/summarize_consumes"

[project.scripts]
summarize_consumes = "melbalabs.summarize_consumes.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "melbalabs.summarize_consumes.package.VERSION"}
dependencies = {file = ["deps/requirements.txt"]}
optional-dependencies.dev = {file = ["deps/requirements-dev.txt"]}
optional-dependencies.release = {file = ["deps/requirements-release.txt"]}

[tool.bumpver]
current_version = "2024.1044"
version_pattern = "YYYY.BUILD"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = false
tag = false
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
]
"src/melbalabs/summarize_consumes/package.py" = [
    'VERSION = "{version}"',
]

